<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Demos.CustomFieldsDemo">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUWXYZabcdefghijklmnopqrstuwxyz- "
        android:hint="Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/card_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="Card Details"
        android:inputType="number" />

    <EditText
        android:id="@+id/month_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="Month"
        android:inputType="number" />

    <EditText
        android:id="@+id/year_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="Year"
        android:inputType="number" />

    <EditText
        android:id="@+id/cvv_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="CVV"
        android:inputType="number" />

    <Button
        android:id="@+id/pay_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="PAY" />


</LinearLayout>