...
                android:paddingRight="@dimen/accepted_cards_margin_side"
                android:text="@string/label_billing_details"
                android:textColor="?attr/colorControlNormal"
                android:textSize="@dimen/expiration_date_text_size" />

            <com.checkout.sdk.input.BillingInput
                android:id="@+id/go_to_billing"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_field_height"
                android:layout_marginLeft="@dimen/basic_field_margin_side"
                android:layout_marginRight="@dimen/basic_field_margin_side"
                android:layout_marginTop="@dimen/basic_field_margin_top"
...
